--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,296 @@
-body {
+* {
+  box-sizing: border-box;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+}
+/* ### Light Theme */
+:root {
+  --very-light-gray: hsl(0, 0%, 98%);
+  --very-light-grayish-blue: hsl(236, 33%, 92%);
+  --light-grayish-blue: hsl(233, 11%, 84%);
+  --dark-grayish-blue: hsl(236, 9%, 61%);
+  --very-dark-grayish-blue: hsl(235, 19%, 35%);
+
+  /* ### Dark Theme */
+
+  --very-dark-blue: hsl(235, 21%, 11%);
+  --very-dark-desaturated-blue: hsl(235, 24%, 19%);
+  --light-grayish-blue: hsl(234, 39%, 85%);
+  --light-grayish-blue-hover: hsl(236, 33%, 92%);
+  --dark-grayish-blue: hsl(234, 11%, 52%);
+  --very-dark-grayish-blue1: hsl(233, 14%, 35%);
+  --very-dark-graysih-blue2: hsl(237, 14%, 26%);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  font-size: 18px;
+  font-family: "Josefin Sans", sans-serif;
+  height: 100%;
+  transition: background 0.2s ease-in;
+}
+.main {
+  height: 100%;
+  background-color: var(--very-dark-blue);
+  position: relative;
+  transition: all 0.2s ease-in;
+}
+.main.light {
+  background-color: var(--very-light-gray);
+}
+
+.background {
+  background: url("./images/bg-desktop-dark.jpg") center center/cover no-repeat;
+  object-fit: contain;
+  height: 40vh;
+  transition: all 0.2s ease-in;
+}
+.background.light {
+  background: url("./images/bg-desktop-light.jpg") center center/cover no-repeat;
+}
+.background-mobile {
+  background: url("./images/bg-mobile-dark.jpg") center center/cover no-repeat;
+  object-fit: contain;
+  height: 40vh;
+  transition: all 0.2s ease-in;
+}
+.background-mobile.light {
+  background: url("./images/bg-mobile-light.jpg") center center/cover no-repeat;
+}
+.container {
+  position: absolute;
+  width: 100%;
+  margin: 0 auto;
+
+  width: 650px;
+  color: var(--dark-grayish-blue);
+  left: 50%;
+  transform: translateX(-50%);
+  top: 17%;
+}
+.container img:hover {
+  cursor: pointer;
+}
+.ontopoflist h1 {
+  color: var(--very-light-gray);
+}
+.ontopoflist {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.ontopoflist img {
+  width: 30px;
+  height: 30px;
+}
+form {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  background-color: var(--very-dark-desaturated-blue);
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  height: 55px;
+  border-radius: 5px;
+  box-shadow: 0 4px 15px 8px rgba(0, 0, 0, 0.18);
+  margin-top: 20px;
+}
+form.light {
+  background-color: var(--very-light-gray);
+}
+form input {
+  width: 80%;
+  outline: none;
+  border: none;
+  color: var(--light-grayish-blue);
+  background-color: var(--very-dark-desaturated-blue);
+  font-family: "Josefin Sans", sans-serif;
+  font-size: 1.1rem;
+  caret-color: rgb(99, 99, 250);
+}
+form input.light {
+  background-color: var(--very-light-gray);
+  color: var(--very-dark-grayish-blue);
+}
+.circle {
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid var(--dark-grayish-blue);
+  position: relative;
+  margin-right: 20px;
+  margin-left: 10px;
+}
+.circle.light {
+  border: 1px solid var(--light-grayish-blue);
+}
+.circle2 {
+  position: relative;
+  bottom: 0.2px;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  transform: scale(0.9);
+  background-color: var(--very-dark-desaturated-blue);
+  display: block;
+}
+
+.circle2.light {
+  background-color: var(--very-light-gray);
+}
+.displaynone {
+  display: none;
+}
+.checked {
+  background: linear-gradient(
+    112deg,
+    rgba(86, 231, 229, 1) 1%,
+    rgba(29, 177, 253, 1) 39%,
+    rgba(213, 69, 252, 1) 75%
+  );
+}
+
+.circle:hover {
+  cursor: pointer;
+  background: linear-gradient(
+    112deg,
+    rgba(86, 231, 229, 1) 1%,
+    rgba(29, 177, 253, 1) 39%,
+    rgba(213, 69, 252, 1) 75%
+  );
+}
+
+.footer-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: 55px;
+  background-color: var(--very-dark-desaturated-blue);
+  font-size: 0.9rem;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+  box-shadow: 0 4px 15px 8px rgba(0, 0, 0, 0.18);
+}
+.footer-container.light {
+  background-color: var(--very-light-gray);
+}
+.footer-container ul {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  list-style: none;
+  width: 25%;
+}
+.footer-container > p {
+  margin-left: 15px;
+}
+ul li {
+  text-decoration: none;
+}
+ul li:hover {
+  cursor: pointer;
+  color: var(--light-grayish-blue-hover);
+}
+ul.light li:hover {
+  color: var(--very-dark-desaturated-blue);
+}
+.footer-container p:last-child:hover {
+  cursor: pointer;
+  color: var(--light-grayish-blue-hover);
+}
+.footer-container p:last-child {
+  margin-right: 15px;
+}
+.footer-container.light p:last-child:hover {
+  color: var(--very-dark-desaturated-blue);
+}
+
+.item {
+  width: 100%;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  height: 55px;
+  background-color: var(--very-dark-desaturated-blue);
+  border-bottom: 1px solid hsl(233, 10%, 63%);
+  position: relative;
+  overflow: hidden;
+}
+.item.light {
+  background-color: var(--very-light-gray);
+}
+.item p {
+  color: var(--light-grayish-blue);
+  max-width: 77%;
+  overflow: hidden;
+}
+.item p:hover {
+  cursor: pointer;
+}
+
+.item p.light {
+  color: var(--very-dark-grayish-blue);
+}
+.cross {
+  position: absolute;
+  right: 15px;
+  display: none;
+}
+
+.item:hover .cross {
+  display: block;
+}
+.cross {
+  cursor: pointer;
+}
+
+.list-container {
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  box-shadow: 0 4px 15px 8px rgba(0, 0, 0, 0.18);
+}
+
+.item:first-child {
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+}
+.crossed {
+  text-decoration: line-through;
+  text-decoration-thickness: 0.1rem;
+}
+.marked {
+  color: hsl(235, 88%, 66%) !important;
+}
+
+.borders {
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+}
+.mobile {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+  margin-top: 20px;
+  background-color: var(--very-dark-desaturated-blue);
+}
+.mobile.light {
+  background-color: var(--very-light-gray);
+}
+.mobile ul {
+  width: 50%;
+}
+@media screen and (max-width: 700px) {
+  .container {
+    width: 80%;
+  }
+  .cross {
+    display: block;
+  }
 }
